Added explanation of how exponential smoothing works

--- a/Time_series.ipynb
+++ b/Time_series.ipynb
@@ -1246,7 +1246,7 @@
     "\n",
     "Considering both these factors, shouldn't it be logical to include trend and seasonality in our forecasts as well?. Hence let us start moving towards more complex models, that do take into account seasonality and trends. There are two models we will be working with, Exponential Smoothing and ARIMA.\n",
     "\n",
-    "For most time series models we would first need to deconstruct out time series. In simple words, viewing the trend and seasonality portion of the data as seperate graphs. "
+    "For most time series models we would first need to deconstruct our time series. In simple words, viewing the trend and seasonality portion of the data as seperate graphs. "
    ]
   },
   {
@@ -1383,11 +1383,53 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Exponential Smoothing :"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The Exponential Smoothing method takes weighted averages of past observation and adjusts for trend and seasonality. We assign an alpha value to each value. Alpha ranges from 0 - 1. If alpha is close to 1, we say recent values carry more weight towards our forecast than previous ones. \n",
+    "\n",
+    "The simplest model we can use is the Simple Exponential Smoothing. This is ideal for data with no seasonal or trend patterns. For further understanding let us implement this model and compare the results against our previous ones. The equation for a SES  model can be written as \n",
+    "\n",
+    "**Forecast = Weight(previous month's value) + Weight(value from 2 months ago)+.........**\n",
+    "\n",
+    "**Weight = alpha(1 - alpha) ^ t  - where t is the time period. 0 means the most recent value and so on**\n",
+    "\n",
+    "For anyone looking to further understand how SES can be implemented manually, you can click on this [link](https://docs.google.com/spreadsheets/d/13Rv9_hOLZswYb7uXh2thUsx1J11OE_A2SVwZqSIqm3I/edit?usp=sharing) where I apply SES manually to a sample dataset.\n",
+    "\n",
+    "Choosing the alpha value is an iterative process, where you can calculate at what alpha value was the error lowest. Thankfully we have libraries that can do most of the legwork for us.\n",
+    "\n",
+    "Since our data does showcase a trend and has seasonality, a SES model is not the best fit. We need to factor in these factors are well in our SES equation. Now we can do it one of two ways, Additively or Multiplicatively. So our final equation looks something like this : \n",
+    "\n",
+    "**Forecast = SES + Trend level + Seasonality or** \n",
+    "\n",
+    "  **Forecast = SES * Trend level * Seasonality**\n",
+    "  \n",
+    "Now I didn't dwell into the maths behind it. We have libraries that will do most of those calculations. What matters is we understand why we are choosing a particular model and how to factor in the different components of the time series data.\n",
+    "\n",
+    "So the question now is how do I know when how to apply the components i.e. additively or multiplicatively. There are various explanations to it. The way I learned it is through visual cues which is by far the easiest: \n",
+    "\n",
+    " - If the trend is realtively constant, then use additively. If the trend increases or decreases in manitude over time use multiplicatively.\n",
+    " - If the seasonality is relatively constant, use additively. If the magnitude changes over time then use multiplicatively. \n",
+    " - If there is no particular trend or pattern, we do not factor it in the equation. \n",
+    "\n",
+    "Let us code a model and see how all of the above comes together. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from statsmodels.tsa."
+   ]
   }
  ],
  "metadata": {
