Explanation of ARIMA added

--- a/Time_series.ipynb
+++ b/Time_series.ipynb
@@ -2528,7 +2528,45 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You can see the effects of differencing and how it helps the data become stationary. If the first differencing doesn't work, we can continue to difference. Be careful here though. The second difference will the difference of the first difference. It sounds confusing. [Here](https://docs.google.com/spreadsheets/d/1-IfOW2EdiGOqCXXKlchZAxvSE8O1tH7EKr6BXGly-Q4/edit?usp=sharing) is a link that shows how first and second differencing is applied to a sample dataset. "
+    "You can see the effects of differencing and how it helps the data become stationary. If the first differencing doesn't work, we can continue to difference. Be careful here though. The second difference will the difference of the first difference. It sounds confusing. [Here](https://docs.google.com/spreadsheets/d/1-IfOW2EdiGOqCXXKlchZAxvSE8O1tH7EKr6BXGly-Q4/edit?usp=sharing) is a link that shows how first and second differencing is applied to a sample dataset. \n",
+    "\n",
+    "So how does an ARIMA model work. There are 3 components to an ARIMA model : \n",
+    "\n",
+    "Auto Regressive or AR - AR models act like linear regression models. The difference here is that the feature are the lagged values of the time series. AR models use p to denote the lag component which means the number of lagged values to use in our model. So if p = 2, we will have to build a model using values for the past two months.\n",
+    "\n",
+    "Moving Average or MA - Built like linear regression models but the difference here is that we will use lagged forecasted errors as features. MA models use q to denote the lag component. \n",
+    "\n",
+    "Integrated component - This refers to the number of times we had to difference to make our data stationary. This is denoted as d. So if d = 1, that means we differenced our series one time.\n",
+    "\n",
+    "When combined ARIMA models are denoted as ARIMA(p,d,q). \n",
+    "\n",
+    "We have covered a lot so let us revise the steps that we will take build an ARIMA model. Lastly let us also assign some rules that will help us choose p,d,q terms. \n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### ARIMA Guide:\n",
+    "\n",
+    "1) Plot the time series decomposition plot. Try to judge whether the data is stationary or not. \n",
+    "\n",
+    "2) Validate your judgement using rolling statistics and ACF Plot.\n",
+    "\n",
+    "3) If the data is non stationary, calculate first difference and plot. Continue until data is stationary.\n",
+    "      - Helper : If the ACF plot of the differenced data still shows significant correlation at lag 1,2,3 so on, then we need difference further. If the ACF plot drops after lag 0, auto correlation are small and patternless or is negative at lag 1 then that means our data is stationary. If the negative auto correlation exceeds -0.5 that means we have over differenced.\n",
+    "\n",
+    "4) Decide upon what model component to use i.e AR or MA.\n",
+    "\n",
+    "5) We will choose an AR model if the lag 1 of the ACF plot of the differenced series is positive or PACF plot drops quickly.\n",
+    "   PACF plots are partial auto correlation plots. PACF denotes the amount of correlation between a series and a lag of itself      that is not explained by correlations at all lower-order lags.\n",
+    "\n",
+    "6) We will choose an MA model when the lag 1 of the ACF plot of the differenced series is negative or PACF decays.\n",
+    "\n",
+    "7) Choose the appropraite terms and build the model. example ARIMA(0,1,1) or ARIMA (1,1,0).\n",
+    "\n",
+    "8) Calculate error value. Plot the forecast with the confidence intervals."
    ]
   },
   {
